--- a/index.html
+++ b/index.html
@@ -47,20 +47,12 @@
 				<a href="#" class="main-image"><img src="https://images-2.wuaki.tv/system/images/6246/original/mulan-pest-1601977372-width1920-quality80.jpeg" alt="" ></a>
 			</div>
 			<div class="movies-row-fixed">
-				<a href="ghdjk" class="boxes"><img src="https://images-0.wuaki.tv/system/images/5033/original/intro-video-1593604981-width308-quality80.jpeg" alt=""></a>
-				<a href="" class="boxes"><img src="https://images-1.wuaki.tv/system/images/5171/original/cinema-garden-1593605290-width308-quality80.jpeg" alt=""></a>
-				<a href="" class="boxes"><img src="https://images-1.wuaki.tv/system/images/2434/original/avod-new-channels-middle-1600327067-width308-quality80.jpeg" alt=""></a>
-				<a href="" class="boxes"><img src="https://images-0.wuaki.tv/system/images/4805/original/starz-reg-vis-web-ui30-1599476365-width308-quality80.jpeg" alt=""></a>
-				<a href="" class="boxes"><img src="https://images-1.wuaki.tv/system/images/6254/original/mulan-3-0-1601901248-width308-quality80.jpeg" alt=""></a>
+				<a href="" class="image-videos"><img src="https://images-2.wuaki.tv/system/images/7210/original/highlights-video-january-2021-middle-1608803899-width308-quality80.jpeg" alt=""></a>
+				<a href="" class="image-videos"><img src="https://images-0.wuaki.tv/system/images/5171/original/cinema-garden-1608108733-width308-quality80.jpeg" alt=""></a>
+				<a href="" class="image-videos"><img src="https://images-2.wuaki.tv/system/images/4805/original/starz-reg-vis-1609748795-width308-quality80.jpeg" alt=""></a>
+				<a href="" class="image-videos"><img src="https://images-3.wuaki.tv/system/images/7055/original/tenet-3-0-1607938156-width308-quality80.jpeg" alt=""></a>
+				<a href="" class="image-videos"><img src="https://images-1.wuaki.tv/system/images/2434/original/avod-generic-middle-1609760387-width308-quality80.jpeg" alt=""></a>
 			</div>
-			<div class="movies-row-fixed">
-				<a href="ghdjk" class="boxes"><img src="https://images-0.wuaki.tv/system/images/5033/original/intro-video-1593604981-width308-quality80.jpeg" alt=""></a>
-				<a href="" class="boxes"><img src="https://images-1.wuaki.tv/system/images/5171/original/cinema-garden-1593605290-width308-quality80.jpeg" alt=""></a>
-				<a href="" class="boxes"><img src="https://images-1.wuaki.tv/system/images/2434/original/avod-new-channels-middle-1600327067-width308-quality80.jpeg" alt=""></a>
-				<a href="" class="boxes"><img src="https://images-0.wuaki.tv/system/images/4805/original/starz-reg-vis-web-ui30-1599476365-width308-quality80.jpeg" alt=""></a>
-				<a href="" class="boxes"><img src="https://images-1.wuaki.tv/system/images/6254/original/mulan-3-0-1601901248-width308-quality80.jpeg" alt=""></a>
-			</div>
-
 			<section class="cinema-top-scifi-movies">
 				<div class="cinema-top-scifi-movies-text">
 					<h3>CINEMA - Top Sci-fi Movies</h3>
