added route to navigate to the detail

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				</div>
 				<div class="cinema-top-scifi-movies-films">
 					<a href="#"><img src="https://trello-attachments.s3.amazonaws.com/5f81f9217eae926ebcb9eced/217x303/2fbd327f5226f045cfbc1c47822e2ee1/underwater-1589221007-width217-quality80.jpeg.jpg" alt="underwater-picture"></a>
-					<a href="#" class="tooltip">
+					<a href="detail.html" class="tooltip">
 						<img src="https://trello-attachments.s3.amazonaws.com/5f81f9217eae926ebcb9eced/217x303/8bf7fb042cdd64d0ff06c65753c375cc/ready-player-one-1564667859-width217-quality80.jpeg.jpg" alt="ready-player-one-picture">
 						<span class="tooltiptext">
 							<div class="tootltip-wrapper">
