added navigation to home from detail and vice-versa

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<nav class="top-nav">
 				<div class="nav-items">
 					<div class="nav-items-menu">
-						<div class="nav-logo nav-hover"><img src="https://appstv-static-content-prod.wuaki.tv/images/720p/UI30_about_us-logo.70c3538baaaa2c6937b498be48c7e456.png"alt="logo image" style="max-width: 100%"></div>
+						<div class="nav-logo nav-hover"><a href="index.html"><img src="https://appstv-static-content-prod.wuaki.tv/images/720p/UI30_about_us-logo.70c3538baaaa2c6937b498be48c7e456.png"alt="logo image" style="max-width: 100%"></a></div>
 	
 						<div class="nav-option nav-hover">
 							<div>CINEMA</div>
