fixed some css of detail page

--- a/detail.html
+++ b/detail.html
@@ -292,7 +292,7 @@
                                             <div class="fill"></div>
                                         </div>
                                     </div>
-                                    <p>IMDb</p>
+                                    <p class="visible-text">IMDb</p>
                                 </div>
                                 <div class="score-circles">
                                     <div class="c100 p76 small green">
@@ -302,7 +302,7 @@
                                             <div class="fill"></div>
                                         </div>
                                     </div>
-                                    <p>The Movie Database</p>
+                                    <p class="visible-text">The Movie Database</p>
                                 </div>
                             </div>
                         </div>
@@ -342,7 +342,7 @@
                                     </a>
                                 </div>
                                 
-                                <div class="genre-container">
+                                <div class="genre-container science-fiction">
                                     <a href="#science-fiction" class="vertical-align">
                                         <div class="genre-background">
                                             <img src="https://trello-attachments.s3.amazonaws.com/5f81f9217eae926ebcb9eced/100x100/36b08c7cda282acbab8902b615640da3/science-fiction-1591342715.png" alt="science-fiction-icon" class="science-fiction-icon">
