--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
 		</header>
 		<main>
 			<div class="slider-wrapper">
-				<a href="#" class="main-image"><img src="https://images-2.wuaki.tv/system/images/6246/original/mulan-pest-1601977372-width1920-quality80.jpeg" alt="" ></a>
+				<a href="#" class="main-image"><img src="https://images-2.wuaki.tv/system/images/6246/original/mulan-pest-1601977372-width1920-quality80.jpeg" alt="mulan" ></a>
 			</div>
 			<div class="movies-row-fixed">
-				<a href="" class="image-videos"><img src="https://images-2.wuaki.tv/system/images/7210/original/highlights-video-january-2021-middle-1608803899-width308-quality80.jpeg" alt=""></a>
-				<a href="" class="image-videos"><img src="https://images-2.wuaki.tv/system/images/4805/original/starz-reg-vis-1609748795-width308-quality80.jpeg" alt=""></a>
-				<a href="" class="image-videos"><img src="https://images-3.wuaki.tv/system/images/5171/original/cinema-garden-1610526071-width308-quality80.jpeg" alt=""></a>
-				<a href="" class="image-videos"><img src="https://images-2.wuaki.tv/system/images/4805/original/starz-reg-vis-1609748795-width308-quality80.jpeg" alt=""></a>
-				<a href="" class="image-videos"><img src="https://images-3.wuaki.tv/system/images/7055/original/tenet-3-0-1607938156-width308-quality80.jpeg" alt=""></a>
-				<a href="" class="image-videos"><img src="https://images-1.wuaki.tv/system/images/2434/original/avod-generic-middle-1609760387-width308-quality80.jpeg" alt=""></a>
-				<a href="" class="image-videos"><img src="https://images-0.wuaki.tv/system/images/7432/original/best-of-2020-promo-middle-web-ui-3-0-1611590412-width308-quality80.jpeg" alt=""></a>
+				<a href="" class="image-videos"><img src="https://images-2.wuaki.tv/system/images/7210/original/highlights-video-january-2021-middle-1608803899-width308-quality80.jpeg" alt="movieCategory"></a>
+				<a href="" class="image-videos"><img src="https://images-2.wuaki.tv/system/images/4805/original/starz-reg-vis-1609748795-width308-quality80.jpeg" alt="movieCategory"></a>
+				<a href="" class="image-videos"><img src="https://images-3.wuaki.tv/system/images/5171/original/cinema-garden-1610526071-width308-quality80.jpeg" alt="movieCategory"></a>
+				<a href="" class="image-videos"><img src="https://images-2.wuaki.tv/system/images/4805/original/starz-reg-vis-1609748795-width308-quality80.jpeg" alt="movieCategory"></a>
+				<a href="" class="image-videos"><img src="https://images-3.wuaki.tv/system/images/7055/original/tenet-3-0-1607938156-width308-quality80.jpeg" alt="movieCategory"></a>
+				<a href="" class="image-videos"><img src="https://images-1.wuaki.tv/system/images/2434/original/avod-generic-middle-1609760387-width308-quality80.jpeg" alt="movieCategory"></a>
+				<a href="" class="image-videos"><img src="https://images-0.wuaki.tv/system/images/7432/original/best-of-2020-promo-middle-web-ui-3-0-1611590412-width308-quality80.jpeg" alt="movieCategory"></a>
 			</div>
 			<section class="cinema-top-scifi-movies">
 				<div class="cinema-top-scifi-movies-text">
